third_party/move/move-compiler-v2/tests/checking/inlining/lambda_return.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/inlining/lambda_return.move:8:20
  │
8 │     assert!(a == 3, 0);
  │                       ^


Diagnostics:
error: Return not currently supported in inline functions
  ┌─ tests/checking/inlining/lambda_return.move:3:2
  │
3 │     return f(b)
  │     ^^^^^^^^^^^
